tests/spec/fail/set_from_list_non_string.aja
import (
    "modules/set"
)

print(set.fromList([1, 2]))
